# ESP32_TRIGGER_AUDIO_TOUR_V1

ESP-32-trigger-audio-tuor-main/: .gitignore  ESP32_TRIGGER_AUDIO_SCHEMATIC.SchDoc  README.md  partitions.csv  sdkconfig  sdkconfig.old
ESP-32-trigger-audio-tuor-main/components/dfplayer/: CMakeLists.txt  dfplayer.c
ESP-32-trigger-audio-tuor-main/components/dfplayer/include/: dfplayer.h
ESP-32-trigger-audio-tuor-main/components/hd44780/: CMakeLists.txt  hd44780.c
ESP-32-trigger-audio-tuor-main/components/i2cdev/: CMakeLists.txt  i2cdev.c
ESP-32-trigger-audio-tuor-main/components/nmea_parser/: CMakeLists.txt
ESP-32-trigger-audio-tuor-main/components/nmea_parser/include/: nmea_parser.h
ESP-32-trigger-audio-tuor-main/components/pcf8574/: CMakeLists.txt  pcf8574.c
ESP-32-trigger-audio-tuor-main/main/: CMakeLists.txt  main.c
